poc-k8s/ns_sa_role.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poc
