poc-k8s/job-test.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: job-test
spec:
  selector:
    matchLabels:
      app: job-test
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: job-test
    spec:
      containers:
      - name: job-test
        image: poc-build:0.1
        command: ["/bin/sh", "/apps/build.sh"]
        volumeMounts:
        - name: docker-sock
          mountPath: /var/run
      volumes:
      - name: docker-sock
        hostPath:
          path: /var/run
          type: Directory
