poc-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-poc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api-server(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-server
            port:
              number: 80
      - path: /inference(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: inference-server
            port:
              number: 5000
