poc-k8s/ingress_svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: poc
  name: ingress-poc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api-server(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-server
            port:
              number: 80
      - path: /inference(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: inference-server
            port:
              number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: poc
  name: ingress-poc-upload
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /upload/$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /upload(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-server
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: poc
  name: api-server
spec:
  ports:
    - name: web-port
      port: 80
      targetPort: 8080
  selector:
    app: api-server
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  namespace: poc
  name: inference-server
spec:
  ports:
    - name: flask-port
      port: 5000
      targetPort: 5000
  selector:
    app: inference-server
  type: ClusterIP
